--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
   <title>CPIT-405 lab 2</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1>CPIT-405</h1>
