--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CPIT-405 lab 2</title>
+  <title>CPIT-405 Lab 2</title>
   <style>
     body {
       display: flex;
@@ -9,9 +9,13 @@
       align-items: center;
       height: 100vh;
       margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
     }
     h1 {
       text-align: center;
+      font-size: 50px;
+      color: #333;
     }
   </style>
 </head>
