--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CPIT-405 Lab 2</title>
+  <title>CPIT-405 Labs</title>
   <style>
     body {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
@@ -16,10 +17,30 @@
       text-align: center;
       font-size: 50px;
       color: #333;
+      margin-bottom: 20px;
+    }
+    .links {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    a {
+      text-decoration: none;
+      font-size: 24px;
+      color: #0066cc;
+      margin: 10px 0;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <h1>CPIT-405</h1>
+  <div class="links">
+    <a href="https://sultan-it-1.github.io/Cpit-405/lab1">Lab 1</a>
+    <a href="https://sultan-it-1.github.io/Cpit-405/lab2">Lab 2</a>
+    <a href="https://sultan-it-1.github.io/Cpit-405/lab3">Lab 3</a>
+  </div>
 </body>
 </html>
