--- a/lab3/index.html
+++ b/lab3/index.html
@@ -4,13 +4,67 @@
   <meta charset="UTF-8">
   <title>Styled Image</title>
   <style>
-    img {
+    .image-preview img {
       border: 30px solid;
       border-color: skyblue lightpink lightgreen #ffefd5;
     }
+    
+     p > span { color: red; }
+     #header span { color: pink; }
+     span { color: green; }
+     #header *:last-child { color: orange; }
+     #header span:first-child:hover { color: blue; }
+
+  
   </style>
 </head>
 <body>
+   <div class="image-preview">
   <img src="https://cpit405.gitlab.io/images/KAU_logo.png" alt="KAU Logo">
+  </div>
+
+
+
+  
+  <div id="header">
+    <span class="myclass1">Every</span>
+    <span class="myclass2">one can</span>
+    <span class="myclass3">success.</span>
+  </div>
+  <p> One machine can do the work of fifty ordinary men.
+    <span class="myclass4">No machine can do the work of one extraordinary man.   </span>
+  </p>
+  
+  
+
+  <h2>CSS Selectors Table</h2>
+  <table border="1">
+    <tr>
+      <th>Span Class</th>
+      <th>Color</th>
+      <th>Color When Mouse Over</th>
+    </tr>
+    <tr>
+      <td>span.myclass1</td>
+      <td>pink</td>
+      <td>blue</td>
+    </tr>
+    <tr>
+      <td>span.myclass2</td>
+      <td>pink</td>
+      <td>pink</td>
+    </tr>
+    <tr>
+      <td>span.myclass3</td>
+      <td>orange</td>
+      <td>orange</td>
+    </tr>
+    <tr>
+      <td>span.myclass4</td>
+      <td>red</td>
+      <td>red</td>
+    </tr>
+  </table>
+  
 </body>
 </html>
