--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,7 +10,7 @@
   <p>Summer Terms <strong>Work</strong>  of the CPIT-405 lab 2 page. It contains a <em>strong</em> tag and an <em>emphasis</em> tag.</p>
 
   <hr>
-# Name of sections  
+<h1># Name of sections </h1> 
   <p>This is the <span>First Intro Slides
 </span> Section of the CPIT-405 . It contains a <span>span</span> tag.</p>
 
@@ -20,7 +20,7 @@
 
   <p>This is the <strong><em>Third CSS Slides</em></strong> Section of the CPIT-405 . It contains a <strong>strong</strong> tag and an <em>emphasis</em> tag.</p>
   
-## Basic content 
+<h2> ## Basic content </h2> 
   <ol>
     <li>Title</li>
     <li>Sections</li>
@@ -32,7 +32,7 @@
     <li>six sections we have</li>
     <li>twelve laps are there</li>
   </ul>
-## Table 
+<h2> ## Table </h2> 
 <table border=“5”>
   <tr>
     <th>Basics</th>
@@ -57,10 +57,10 @@
 </table>
   <dl>
     <dt>Lap 1</dt>
-    ### task 1
+   <h3>  ### task 1</h3> 
     <dd>Complete lap Setting up your web development environment</dd>
     <dt>Lap 2</dt>
-    ### task 2 
+   <h3>  ### task 2</h3>  
     <dd>Work in lap Introduction, HTML Structure</dd>
   </dl>
 
