--- a/labb2&3/index.html
+++ b/labb2&3/index.html
@@ -1,1 +1,142 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>CPIT-405 lab 2</title>
+   <style>
+    .image-preview img {
+      border: 30px solid;
+      border-color: skyblue lightpink lightgreen #ffefd5;
+    }
+    
+     p > span { color: red; }
+     #header span { color: pink; }
+     span { color: green; }
+     #header *:last-child { color: orange; }
+     #header span:first-child:hover { color: blue; }
 
+  
+  </style>
+</head>
+<body>
+  <h1>Lab 2: HTML</h1>
+  <a href="https://cpit405.gitlab.io">CPIT-405</a>
+
+  <p>Summer Terms <strong>Work</strong>  of the CPIT-405 lab 2 page. It contains a <em>strong</em> tag and an <em>emphasis</em> tag.</p>
+
+  <hr>
+<h1># Name of sections </h1> 
+  <p>This is the <span>First Intro Slides
+</span> Section of the CPIT-405 . It contains a <span>span</span> tag.</p>
+
+  <p>This is the <sup>Second HTML Slides</sup> Section of the CPIT-405 . It contains a <sup>superscript</sup> tag.</p>
+
+  <p>This is the <sub>fourth</sub> paragraph of the CPIT-405 lab 2 page. It contains a <sub>subscript</sub> tag.</p>
+
+  <p>This is the <strong><em>Third CSS Slides</em></strong> Section of the CPIT-405 . It contains a <strong>strong</strong> tag and an <em>emphasis</em> tag.</p>
+  
+<h2> ## Basic content </h2> 
+  <ol>
+    <li>Title</li>
+    <li>Sections</li>
+    <li>Laps</li>
+  </ol>
+
+  <ul>
+    <li>CPIT-405</li>
+    <li>six sections we have</li>
+    <li>twelve laps are there</li>
+  </ul>
+<h2> ## Table </h2> 
+<table border=“5”>
+  <tr>
+    <th>Basics</th>
+    <th>Front-end Frameworks</th>
+    <th>Server-side frameworks</th>
+  </tr>
+  <tr>
+    <td>HTML</td>
+    <td>React</td>
+    <td>Spring</td>
+  </tr>
+  <tr>
+    <td>CSS</td>
+    <td>Angular</td>
+    <td>Django</td>
+  </tr>
+  <tr>
+    <td>JS</td>
+    <td>Vue</td>
+    <td>Laravel</td>
+  </tr>
+</table>
+  <dl>
+    <dt>Lap 1</dt>
+   <h3>  ### task 1</h3> 
+    <dd>Complete lap Setting up your web development environment</dd>
+    <dt>Lap 2</dt>
+   <h3>  ### task 2</h3>  
+    <dd>Work in lap Introduction, HTML Structure</dd>
+  </dl>
+
+  <form>
+    <label for="login">Login:</label>
+    <input type="text" id="login" name="login">
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password">
+    <br>
+    <input type="submit" value="Submit">
+  </form>
+
+
+
+  
+   <div class="image-preview">
+  <a href="https://cpit405.gitlab.io/images/KAU_logo.png"> <img src="https://cpit405.gitlab.io/images/KAU_logo.png" alt="KAU Logo" border="0">
+  </a>
+  </div>
+  
+  
+  <div id="header">
+    <span class="myclass1">Every</span>
+    <span class="myclass2">one can</span>
+    <span class="myclass3">success.</span>
+  </div>
+  <p> One machine can do the work of fifty ordinary men.
+    <span class="myclass4">No machine can do the work of one extraordinary man.   </span>
+  </p>
+  
+  
+
+  <h2>CSS Selectors Table</h2>
+  <table border="1">
+    <tr>
+      <th>Span Class</th>
+      <th>Color</th>
+      <th>Color When Mouse Over</th>
+    </tr>
+    <tr>
+      <td>span.myclass1</td>
+      <td>pink</td>
+      <td>blue</td>
+    </tr>
+    <tr>
+      <td>span.myclass2</td>
+      <td>pink</td>
+      <td>pink</td>
+    </tr>
+    <tr>
+      <td>span.myclass3</td>
+      <td>orange</td>
+      <td>orange</td>
+    </tr>
+    <tr>
+      <td>span.myclass4</td>
+      <td>red</td>
+      <td>red</td>
+    </tr>
+  </table>
+  
+  </a>
+</body>
+</html>
