--- a/lab2&3/index.html
+++ b/lab2&3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CPIT-405 lab 2</title>
+  <title>CPIT-405 lab 2&3</title>
    <style>
     .image-preview img {
       border: 30px solid;
