--- a/lab2&3/index.html
+++ b/lab2&3/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>Lab 2: HTML</h1>
+  <h1>Lab 2&3: HTML</h1>
   <a href="https://cpit405.gitlab.io">CPIT-405</a>
 
   <p>Summer Terms <strong>Work</strong>  of the CPIT-405 lab 2 page. It contains a <em>strong</em> tag and an <em>emphasis</em> tag.</p>
