--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <a href="https://sultan-it-1.github.io/Cpit-405/lab1" target="_blank">Lab 1</a>
     <a href="https://sultan-it-1.github.io/Cpit-405/lab2" target="_blank">Lab 2</a>
     <a href="https://sultan-it-1.github.io/Cpit-405/lab3" target="_blank">Lab 3</a>
+    <a href="https://sultan-it-1.github.io/Cpit-405/lab4" target="_blank">Lab 4</a>
+
   </div>
 </body>
 </html>
