--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Photo Gallery</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Dynamic Photo Gallery</h1>
+    <div id="gallery"></div>
+    <input type="text" id="photoUrl" placeholder="Enter photo URL">
+    <button id="addPhotoButton">Add Photo</button>
+    <script src="script.js"></script>
+</body>
+</html>
 
