--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <a href="https://sultan-it-1.github.io/Cpit-405/lab2" target="_blank">Lab 2</a>
     <a href="https://sultan-it-1.github.io/Cpit-405/lab3" target="_blank">Lab 3</a>
     <a href="https://sultan-it-1.github.io/Cpit-405/lab4" target="_blank">Lab 4</a>
+    <a href="https://sultan-it-1.github.io/Cpit-405/lab5" target="_blank">Lab 5</a>
 
   </div>
 </body>
