--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Like or Dislike</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Like or Dislike</h1>
+        <div class="buttons">
+            <div class="button" id="likeButton">
+                👍 <span id="likeCount">100</span>
+            </div>
+            <div class="button" id="dislikeButton">
+                👎 <span id="dislikeCount">20</span>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
