--- a/lab7/index.html
+++ b/lab7/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Lab 7</h1>
-    <h2>Asynchronous JavaScript (Ajax programming)</h2>
-    <h3>Objective</h3>
-    <p>Consume an API using XHR, fetch, async fetch</p>
-    <h3>Lab Description</h3>
-    <p>Create a web page that consumes the <a href="https://developers.giphy.com/docs/api/" target="_blank">Giphy API</a>.</p>
+
+    <p> <h2>"Welcome to the largest GIF library"</h2>  <a href="https://developers.giphy.com/docs/api/" target="_blank">Giphy API</a>.</p>
     
     <input type="text" id="query" placeholder="Enter search term">
     <button onclick="searchGiphyXHR()">Search using XHR</button>
