--- a/lab7/index.html
+++ b/lab7/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 
-    <p> <h2>"Welcome to the largest GIF library"</h2>  <a href="https://developers.giphy.com/docs/api/" target="_blank">Giphy API</a>.</p>
+  <div>
+    <h2>"Welcome to the largest GIF library"</h2>  <a href="https://developers.giphy.com/docs/api/" target="_blank"><h3> by Giphy API</h3></a>
+    </div>
+
     
-    <input type="text" id="query" placeholder="Enter search term">
     <button onclick="searchGiphyXHR()">Search using XHR</button>
     <button onclick="searchGiphyFetch()">Search using fetch</button>
     <button onclick="searchGiphyAsync()">Search using fetch with async/await</button>
