--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <a href="https://sultan-it-1.github.io/Cpit-405/lab5" target="_blank">Lab 5</a>
     <a href="https://sultan-it-1.github.io/Cpit-405/lab6" target="_blank">Lab 6</a>
     <a href="https://sultan-it-1.github.io/Cpit-405/lab7" target="_blank">Lab 7</a>
+    <a href="https://dymxrn.csb.app/" target="_blank">Lab 8</a>
+
 
 
 
