--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <a href="https://sultan-it-1.github.io/Cpit-405/lab6" target="_blank">Lab 6</a>
     <a href="https://sultan-it-1.github.io/Cpit-405/lab7" target="_blank">Lab 7</a>
     <a href="https://dymxrn.csb.app/" target="_blank">Lab 8</a>
+    <a href="https://jjqz7j.csb.app/" target="_blank">Lab 9</a>
+
 
 
 
